# reliable-file-transfer-protocol

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
legacy/: rftp.py
src/rftp/: __init__.py  bench.py  cli.py  constants.py  net.py  packet.py  receiver.py  sender.py
tests/: test_packet.py
