[project]
name = "rftp"
version = "0.1.0"
description = "Reliable UDP file transfer with Stop-and-Wait and Go-Back-N protocols"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".git", "venv", ".github"]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
